--- a/packages/website/src/styles/global.css
+++ b/packages/website/src/styles/global.css
@@ -54,9 +54,14 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   color: rgb(var(--fg-rgb));
-  background-color: rgb(var(--bg-rgb)); 
+  background-color: rgb(var(--bg-rgb));
   font-family: var(--font-sans);
 }
 
